fixed div center on mobile

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -29,6 +29,6 @@
     height: 100vh;
 }
 
-agm-map {
-    height: 300px;
-  }
+.app-body {
+    margin: 0;
+}
