--- a/src/app/resorts/resorts-hero/hero.component.css
+++ b/src/app/resorts/resorts-hero/hero.component.css
@@ -5,4 +5,5 @@
     min-height: 300px;
     color: #fff;
     padding-left: 2em;
+    margin: 0;
   }
