--- a/src/app/resorts/resorts.component.css
+++ b/src/app/resorts/resorts.component.css
@@ -1,3 +1,10 @@
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
 .resort-card {
     height: 240px;
     width: 320px;
